fix: error comes from tailwind css installation and add route for component in SPA

--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,2 @@
-# Node modules
-node_modules/
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Environment & config files
-.env
-.env.*        # multiple environment variants
-config.js
-config.json
-*.local.json
-*.local.js
-
-# Package lock files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# IDE / Editor files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# Temporary / cache files
-.cache/
-dist/
-build/
-tmp/
-temp/
-
-# Test coverage
-coverage/
-
-# dependencies
-/node_modules
-
-# production build
-/build
-
-# misc
-.DS_Store
-.env
-.env.*.local
-
-# log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# lock files (optional — keep if you want exact dependency versions)
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# temporary
-.tmp
-.cache
-dist
-
-# test coverage
-coverage
+.config.js
